@@ -1,3 +1,10 @@
+Tue Mar 14 05:32:38 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>
+
+        * tao/Array_Traits_T.h (copy_range):
+
+          Made this trait method a member template to provide support for
+          checked destination iterators.
+
 Tue Mar 13 20:05:54 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * orbsvcs/tests/Simple_Naming/client.h:
